Step8: Add Scheduling & Async Tasks